Scrapped the previous commit's implementation of the inventory tooltip clipping/overflowing issue.
- Now it doesn't clip/overflow or adjust itself at the expense of other items

--- a/src/css/project_css/inventory/0_base.scss
+++ b/src/css/project_css/inventory/0_base.scss
@@ -58,7 +58,7 @@
 
   box-sizing: border-box;
 
-  position: relative;
+  // position: relative;
 }
 
 .inventory-item-name {
